# agent-pet-companion

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md
.codex/environments/: environment.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
apps/macos/: Package.resolved  Package.swift
crates/petcore/: Cargo.toml
crates/petcore-cli/: Cargo.toml
crates/petcore-cli/src/: main.rs
crates/petcore-cli/tests/: petpack_export_routing.rs  petpack_import_routing.rs
crates/petcore-types/: Cargo.toml
crates/petcore/src/: adapter_contracts.rs  agent_environment.rs  agent_session_filters.rs  agent_state.rs  app_server.rs  connections.rs  daemon.rs  db.rs  diagnostics.rs  event_envelope.rs  generation.rs  instance_lock.rs  launch_agent.rs  lib.rs  main.rs  metrics.rs  paths.rs  pet_revision.rs  petpack.rs  process_runner.rs  reference_images.rs  rpc.rs  runtime_manifest.rs
crates/petcore/tests/: agent_state_arbitration.rs  app_server_transport.rs  bundled_pets.rs  connector_contracts.rs  connector_ordering.rs  core_validation.rs  daemon_http_security.rs  daemon_lifecycle.rs  event_envelope_security.rs  generation_form_contract.rs  generation_jsonl_recovery.rs  generation_lifecycle.rs  generation_recovery.rs  onboarding.rs  petpack_export.rs  petpack_import_atomic.rs  petpack_resource_limits.rs  process_runner.rs  reference_image_policy.rs  runtime_manifest.rs  schema_fixtures.rs
crates/petcore/tests/fixtures/: process_runner_descendants.c
docs/: PROJECT_STATUS.md  README.md
docs/architecture/: data-model.md  overview.md  runtime-and-ipc.md
docs/design/: AgentPetCompanion_ImplementationPlan_V2.md  AgentPetCompanion_TechnicalPlan_V1_1.md  ChatGPT_Codex_Merge_Impact_2026-07-13.md  README.md
docs/development/: product-refactor-execution.md  validation.md
docs/integrations/: agent-connectors.md
docs/plan/: AgentPetCompanion_ImplementationPlan_V2.md
docs/product/: experience-contract.md
docs/release/: macos-release.md
fixtures/security/: sensitive-agent-event.json
logo/: README.md
plugins/: connector-privacy.test.mjs
schemas/: agent-event-ingest.schema.json  agent-event.schema.json  agent-hook-input.schema.json  pet-brief.schema.json  pet-source-event.schema.json  pet-source.schema.json  pet-validation.schema.json  petpack.schema.json
script/: build_and_run.sh  build_app_bundle.sh  build_release.sh  capture_audit_screenshots.sh  public_distribution_pipeline.sh  sign_and_notarize.sh  test_all.sh  validate_app_bundle.sh  validate_app_lifecycle_contract.sh  validate_app_recovery.sh  validate_build_scripts_safety.sh  validate_codex_plugin_version.py  validate_connectors_runtime.sh  validate_distribution_signature.sh  validate_event_storm.sh  validate_github_release_api.py  validate_github_release_artifacts.sh  validate_m0.sh  validate_m1.sh  validate_m2.sh  validate_m3.sh  validate_m4.sh  validate_m5.sh  validate_m6.sh  validate_macho_architectures.sh  validate_main_window_ui.sh  validate_overlay_interaction.sh  validate_overlay_non_mouse.sh  validate_overlay_offline.sh  validate_overlay_runtime.sh  validate_overlay_scale_persistence.sh  validate_pet_studio_helper.sh  validate_petpack_spec_schemas.sh  validate_portable_pet_maker.sh  validate_profiles.md  validate_public_release_artifacts.sh  validate_real_agent_connectors.sh  validate_real_app_server.sh  validate_release_artifact_metadata.py  validate_release_identity.py  (+11 more)
(+219 files in other folders)
