[workspace]
members = [
  "crates/petcore-types",
  "crates/petcore",
  "crates/petcore-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://example.invalid/agent-pet-companion"

[workspace.dependencies]
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting"] }
uuid = { version = "1", features = ["serde", "v7"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
