[package]
name = "petcore-cli"
version = "0.1.1"
edition.workspace = true
license.workspace = true

[dependencies]
petcore = { path = "../petcore" }
petcore-types = { path = "../petcore-types" }
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "petcore-cli"
path = "src/main.rs"
