[package]
name = "petcore"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
hex.workspace = true
image.workspace = true
jsonschema = { version = "0.33", default-features = false }
petcore-types = { path = "../petcore-types" }
rusqlite.workspace = true
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
zip.workspace = true

[[bin]]
name = "petcore"
path = "src/main.rs"
